crates/ridge-parser/tests/fixtures/errors/p009_non_assoc_lt_chain.rg
-- expect: P009
-- Trigger: non-associative relational operator `<` chained.
fn g =
    a < b < c
